Aanbod overlapping fixen

--- a/css/style.css
+++ b/css/style.css
@@ -662,19 +662,19 @@ footer a:hover {
 
 /* -- Aanbod sectie -- */
 
-.aanbod {
+#HOME .aanbod {
   height: auto;
   margin-left: 0;
   padding-left: 0;
 }
 
-.aanbod h2 {
+#HOME .aanbod h2 {
   color: #85c226;
   margin-left: 21%;
   margin-bottom: 2%;
 }
 
-.aanbod article {
+#HOME .aanbod article {
   padding-top: 3%;
   padding-bottom: 3%;
   min-height: 280px;
@@ -682,7 +682,7 @@ footer a:hover {
   width: 49%;
 }
 
-.aanbod .moreinfobox{
+#HOME .aanbod .moreinfobox{
   width: 30%;
   border: 1px solid;
   border-color: white;
@@ -698,12 +698,12 @@ footer a:hover {
   
 }
 
-.aanbod h3{
+#HOME .aanbod h3{
   font-size: 2em;
   margin-bottom: 2%;
 }
 
-.aanbod p{
+#HOME .aanbod p{
   margin-bottom: 5%;
 }
 
